--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/junit-4.13.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/servlet-api.jar.zip"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
